tests/ui/invariant_on_struct.stderr
error: custom attribute panicked
 --> tests/ui/invariant_on_struct.rs:3:1
  |
3 | #[invariant(self.value > 0)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: not implemented: The #[invariant] attribute only works on functions and impl-blocks.

error[E0422]: cannot find struct, variant or union type `Positive` in this scope
 --> tests/ui/invariant_on_struct.rs:9:13
  |
9 |     let _ = Positive { value: 1 };
  |             ^^^^^^^^ not found in this scope
